# programmering_inom_dataplatform-Lab2

./: .env.example  .gitignore  Dockerfile  README.md  config.py  dashboard.py  docker-compose.yml  dockerfile  env-example.md  extract.py  import_authors.py  import_documents.py  import_members.py  import_speeches.py  import_votes.py  insert_parties.sql  load.py  log_status.py  main.py  pyproject.toml  requirements.txt  riksdagen.csv  test_main.py  test_producer.py  test_psycopg.py  test_transform.py  transform.py
.streamlit/: config.toml
app/: main.py
cleaners/: clean_anforanden.py  clean_dokument.py  clean_kalender.py  clean_ledamoter.py  clean_voteringar.py
config/: settings.py
data/: anforanden.csv  dokument.csv  kalender.csv  ledamoter.csv  voteringar.csv
database/: database.py  load.py  test_db_connection.py
docs/: docker_kafka_setup.md
dokumentation/: betygs_underlag.md
extract/: extract.py  format_files.py
load/: create_table.sql  load.py
pages/: first_page.py  members.py  page_anforanden.py  page_calendar.py  page_voteringar.py
scripts/: create_csv.py
services/: riksdag_api.py
transform/: clean.py  flag.py  reject.py
utils/: supabase_client.py
