[project]
name = "programmering-inom-dataplatform-lab2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "confluent-kafka>=2.13.2",
    "fastapi[standard]>=0.135.1",
    "httpx>=0.28.1",
    "pandas>=3.0.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
