[project]
name = "programmering-inom-dataplatform-lab2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "confluent-kafka>=2.13.2",
    "fastapi[standard]>=0.135.1",
    "pandas>=3.0.1",
    "streamlit>=1.19.0",
    "altair>=4.0.0,<5.0.0",
    "supabase>=2.28.3",
]
